# BPFL

./: .gitmodules  README.md  aggregation.py  attack.py  bpfl.py  generate_data.py  main.py  model.py  train_test.py  util.py
ZKP/: CMakeLists.txt
ZKP/src/: CMakeLists.txt  example.cpp  gadget copy.hpp  gadget.hpp  main.cpp
